--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body{
-	font-family:'Source Sans Pro', sans-serif;
-	padding-top:70px;
+	font-family:'Roboto', sans-serif;
 }
 .instagram-icon:before{
 	content: '\f215';
@@ -14,4 +13,56 @@ body{
 }
 .white-text{
 	color:white;
+}
+html, body {
+margin: 0;
+width: 100%;
+height: 100%;
+}
+div{
+	padding:0;
+}
+
+.hero {
+background-image:url('http://a5.files.blazepress.com/image/upload/MTI4OTkyNzMxNDM4NjQxMTIy.gif');
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+display: table;
+width: 100%;
+}
+.hero .container {
+display: table-cell;
+text-align: center;
+vertical-align: middle;
+height: 689px
+}
+#img-logo{
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	margin-bottom: 10px;
+}
+h1 {
+	font-size: 72px;
+	font-weight: 700;
+
+}
+h2 {
+	font-size: 30px;
+}
+h3 {
+	font-size: 26px;
+}
+h4 {
+	font-size: 22px;
+}
+h5 {
+	font-size: 18px;
+}
+p {
+	font: 14px/1.5em "Roboto";
 }
