--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,16 @@ p {
 	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.16);
 	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.16);
 }
+.white-text{
+	color:white;
+}
+.black-text{
+	color:black;
+}
+#about-title{
+	padding-top:20px;
+	font-size:54px;
+}
+.light{
+	font-weight: 300;
+}
