--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,6 @@ h5 {
 p {
 	font: 14px/1.5em "Roboto";
 	line-height: 2;
-	font-weight:500;
 }
 .navbar-nav > li > a {
 	font-family: "Roboto", Helvetica, Arial, sans-serif;
@@ -171,4 +170,7 @@ p {
 }
 .light{
 	font-weight: 300;
+}
+.blue{
+	background-color: #2980b9;
 }
