--- a/css/main.css
+++ b/css/main.css
@@ -184,3 +184,17 @@ p {
 #about-text{
 	font-size:16px;
 }
+#footer{
+	height:10vh;
+	bottom: 0;
+	background-color:#2980b9;
+}
+i{
+	padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+	color:white;
+	padding-right:5px;
+}
+#last-icon{
+	padding-right: 0;
+}
