--- a/css/main.css
+++ b/css/main.css
@@ -198,3 +198,9 @@ i{
 #last-icon{
 	padding-right: 0;
 }
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+		padding: 2px 16px;
+}
