--- a/css/main.css
+++ b/css/main.css
@@ -199,8 +199,14 @@ i{
 	padding-right: 0;
 }
 .card {
-    /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-		padding: 2px 16px;
+		padding: 3px 16px;
+}
+hr{
+	border-top: 3px double black;
+	width:25%;
+}
+#sponsor{
+	padding-bottom: 10px;
 }
