Change of Fonts

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-	font-family:'Roboto', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	margin-bottom:60px;
 }
 .instagram-icon:before{
