--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ height: 689px
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	margin-bottom: 10px;
 }
 h1 {
@@ -66,7 +66,7 @@ h5 {
 	font-size: 18px;
 }
 p {
-	font: 14px/1.5em "Roboto";
+	font: 14px/1.5em;
 	line-height: 2;
 }
 .navbar-nav > li > a {
