Change font of nav

--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ p {
 	line-height: 2;
 }
 .navbar-nav > li > a {
-	font-family: "Roboto", Helvetica, Arial, sans-serif;
+	font-family: "Montserrat", Helvetica, Arial, sans-serif;
 	font-weight: 500;
 }
 .navbar-custom {
